--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=create
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/changement de serie
-spring.datasource.username=oumaima
-spring.datasource.password=oumaima123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: truea
+### DATABASE ###
+spring.datasource.url=jdbc:mysql://localhost:3306/changementserie?useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+### JPA / HIBERNATE ###
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+server.port=8088
+server.servlet.context-path=/springMVC
